--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,7 +133,7 @@ jobs:
             }
 
       - name: Post comment on PR
-        if: env.FAIL_JOB != 'true'
+        if: env.FAIL_JOB == 'false'
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
@@ -162,7 +162,7 @@ jobs:
               });
               console.log("Deleted existing comment.");
             } else {
-              console.log("Comment update attempt denied. Actor does not match.");
+              console.log("Comment deleted attempt denied. Actor does not match.");
             }
 
       - name: Fail job if errors found
