--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,8 @@ jobs:
 
       - name: failure PR
         if: failure()
+        run: |
+          
 
       - name: Upload Test Reports
         if: always()
