--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
           if [ -f gradle-exit-code-false.txt ] && [ -s gradle-exit-code-false.txt ]; then
             # Lesen Sie den Fehlercode und die Fehlerausgabe
             error_output_false=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
-            cat cat gradle-exit-code-false.txt 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            cat gradle-exit-code-false.txt 2>/dev/null | tr '\n' ' ' | tr -d '\r'
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "error_output_false=$error_output_false" >> $GITHUB_ENV
           else
