--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,41 +49,44 @@ jobs:
         env:
           DOCKER_ENABLE_SECURITY: false
 
-      - name: Build with Gradle and with spring security
-        run: ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-true.txt
-        env:
-          DOCKER_ENABLE_SECURITY: true
-
-      - name: Check Gradle Build Status
+      - name: Check Gradle Build Status DOCKER_ENABLE_SECURITY - false
         run: |
           if [ -f gradle-exit-code-false.txt ] && [ -s gradle-exit-code-false.txt ]; then
             # Lesen Sie den Fehlercode und die Fehlerausgabe
             error_output_false=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
-            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            cat error_output_false
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "error_output_false=$error_output_false" >> $GITHUB_ENV
           else
             echo "error_output_false=" >> $GITHUB_ENV
           fi
 
+      - name: Build with Gradle and with spring security
+        run: ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-true.txt
+        env:
+          DOCKER_ENABLE_SECURITY: true
+
+      - name: Check Gradle Build Status DOCKER_ENABLE_SECURITY - true
+        run: |
           if [ -f gradle-exit-code-true.txt ] && [ -s gradle-exit-code-true.txt ]; then
             # Lesen Sie den Fehlercode und die Fehlerausgabe
             error_output_true=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
-            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            cat error_output_true
             # Erstellen Sie eine Ausgabe für den nächsten Schritt
             echo "error_output_true=$error_output_true" >> $GITHUB_ENV
           else
             echo "error_output_true=" >> $GITHUB_ENV
           fi
 
-      - name: PR | Check Dependency Verfication error
-        if: (env.error_output_false || env.error_output_true) && github.event_name == 'pull_request'
+      - name: Check Dependency Verfication error
+        if: env.error_output_false || env.error_output_true
         run: |
           if echo "${{ env.error_output_false }}" | grep -q 'dependency-verification-report.html' || \
             echo "${{ env.error_output_true }}" | grep -q 'dependency-verification-report.html'; then
             echo "FAIL_JOB=true" >> $GITHUB_ENV
           else if echo "${{ env.error_output_false }}" || \
             echo "${{ env.error_output_true }}"; then
+            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
             echo "FAIL=true" >> $GITHUB_ENV
           else
             echo "FAIL_JOB=false" >> $GITHUB_ENV
@@ -96,6 +99,7 @@ jobs:
         with:
           name: test-reports-jdk-${{ matrix.jdk-version }}
           path: |
+            gradle-error.log
             build/reports/tests/
             build/test-results/
             build/reports/problems/
