--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,8 +84,7 @@ jobs:
           if echo "${{ env.error_output_false }}" | grep -q 'dependency-verification-report.html' || \
             echo "${{ env.error_output_true }}" | grep -q 'dependency-verification-report.html'; then
             echo "FAIL_JOB=true" >> $GITHUB_ENV
-          else if echo "${{ env.error_output_false }}" || \
-            echo "${{ env.error_output_true }}"; then
+          elif [ -n "${{ env.error_output_false }}" ] || [ -n "${{ env.error_output_true }}" ]; then
             cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
             echo "FAIL=true" >> $GITHUB_ENV
           else
