--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
           retention-days: 3
 
       - name: PR | Post comment
-        if: env.FAIL_JOB == 'true'
+        if: env.FAIL_JOB == 'true' && github.event_name == 'pull_request'
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
@@ -139,7 +139,7 @@ jobs:
             }
 
       - name: PR | Delete comment
-        if: env.FAIL_JOB == 'false'
+        if: env.FAIL_JOB == 'false' && github.event_name == 'pull_request'
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
