--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,9 @@ jobs:
 
       - name: Build with Gradle and no spring security
         id: build_without_security
-        run: ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-false.txt
+        run: |
+          set -e
+          ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-false.txt
         env:
           DOCKER_ENABLE_SECURITY: false
 
@@ -69,7 +71,9 @@ jobs:
 
       - name: Build with Gradle and with spring security
         id: build_with_security
-        run: ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-true.txt
+        run: |
+          set -e
+          ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-true.txt
         env:
           DOCKER_ENABLE_SECURITY: true
 
