--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,10 +47,31 @@ jobs:
       - name: Build with Gradle and no spring security
         id: build_without_security
         run: |
-          set -e
-          ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-false.txt
+          ./gradlew clean build || echo $? > gradle-exit-code.txt # 2>gradle-error.log || echo $? > gradle-exit-code-false.txt
         env:
           DOCKER_ENABLE_SECURITY: false
+
+      - name: Check Gradle Build Exit Code
+        if: always() # Wird immer ausgeführt, unabhängig vom vorherigen Schritt
+        run: |
+          if [ -f gradle-exit-code.txt ]; then
+            exit_code=$(cat gradle-exit-code.txt)
+            echo "The Gradle build failed with exit code $exit_code"
+            echo "exit_code=$exit_code" >> $GITHUB_ENV
+          else
+            echo "exit_code=0" >> $GITHUB_ENV
+          fi
+
+      - name: Failure Handling
+        if: ${{ env.exit_code != '0' }}
+        run: |
+          echo "The Gradle build step failed with exit code ${{ env.exit_code }}"
+
+      - name: failure
+        if: ${{ failure() }}
+        run: |
+          echo ${{ steps.build_without_security.conclusion }}
+          echo ${{ steps.build_without_security.outputs }}
 
       # - name: Check Gradle Build Status DOCKER_ENABLE_SECURITY - false
       #   run: |
@@ -64,15 +85,9 @@ jobs:
       #       echo "error_output_false=" >> $GITHUB_ENV
       #     fi
 
-      - name: failure
-        if: ${{ failure() }}
-        run: |
-          echo ${{ steps.build_without_security.conclusion  }}
-
       - name: Build with Gradle and with spring security
         id: build_with_security
         run: |
-          set -e
           ./gradlew clean build 2>gradle-error.log || echo $? > gradle-exit-code-true.txt
         env:
           DOCKER_ENABLE_SECURITY: true
