--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build with Gradle and no spring security
         id: build_without_security
         run: |
-          ./gradlew clean build || echo $? > gradle-exit-code-false.txt
+          ./gradlew clean build 2> >(tee gradle-error.log >&2) || echo $? > gradle-exit-code-false.txt
         env:
           DOCKER_ENABLE_SECURITY: false
 
@@ -55,7 +55,7 @@ jobs:
         if: ${{ always() && steps.build_without_security.conclusion }}
         run: |
           if [ -f gradle-exit-code-false.txt ]; then
-            cat gradle-exit-code-false.txt 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
             exit_code=$(cat gradle-exit-code-false.txt)
             echo "The Gradle build failed with exit code $exit_code"
             echo "exit_code_false=$exit_code" >> $GITHUB_ENV
@@ -75,7 +75,7 @@ jobs:
       - name: Build with Gradle and with spring security
         id: build_with_security
         run: |
-          ./gradlew clean build || echo $? > gradle-exit-code-true.txt
+          ./gradlew clean build 2> >(tee gradle-error.log >&2) || echo $? > gradle-exit-code-false.txt
         env:
           DOCKER_ENABLE_SECURITY: true
 
@@ -83,7 +83,7 @@ jobs:
         if: ${{ always() && steps.build_with_security.conclusion }}
         run: |
           if [ -f gradle-exit-code-true.txt ]; then
-            cat gradle-exit-code-true.txt 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
             exit_code=$(cat gradle-exit-code-true.txt)
             echo "The Gradle build failed with exit code $exit_code"
             echo "exit_code_true=$exit_code" >> $GITHUB_ENV
