--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,11 @@ jobs:
         if: ${{ always() && steps.build_without_security.conclusion }}
         run: |
           if [ -f gradle-exit-code-false.txt ]; then
-            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            error_output=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
             exit_code=$(cat gradle-exit-code-false.txt)
             echo "The Gradle build failed with exit code $exit_code"
             echo "exit_code_false=$exit_code" >> $GITHUB_ENV
+            echo "error_output_false=$error_output" >> $GITHUB_ENV
           else
             echo "exit_code_false=0" >> $GITHUB_ENV
           fi
@@ -67,6 +68,9 @@ jobs:
         if: ${{ env.exit_code_false != '0' }}
         run: |
           echo "The Gradle build step failed with exit code ${{ env.exit_code_false }}"
+          if echo "${{ env.error_output_false }}" | grep -q 'dependency-verification-report.html'; then
+            exit(${{ env.exit_code_false }})
+          fi
 
       - name: failure
         run: |
@@ -83,10 +87,11 @@ jobs:
         if: ${{ always() && steps.build_with_security.conclusion }}
         run: |
           if [ -f gradle-exit-code-true.txt ]; then
-            cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r'
+            error_output=$(cat gradle-error.log 2>/dev/null | tr '\n' ' ' | tr -d '\r' || echo "No error output captured.")
             exit_code=$(cat gradle-exit-code-true.txt)
             echo "The Gradle build failed with exit code $exit_code"
             echo "exit_code_true=$exit_code" >> $GITHUB_ENV
+            echo "error_output_true=$error_output" >> $GITHUB_ENV
           else
             echo "exit_code_true=0" >> $GITHUB_ENV
           fi
@@ -95,6 +100,9 @@ jobs:
         if: ${{ env.exit_code_true != '0' }}
         run: |
           echo "The Gradle build step failed with exit code ${{ env.exit_code_true }}"
+          if echo "${{ env.error_output_true }}" | grep -q 'dependency-verification-report.html'; then
+            exit(${{ env.exit_code_true }})
+          fi
 
       # - name: Check Gradle Build Status DOCKER_ENABLE_SECURITY - true
       #   run: |
