--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -99,6 +99,16 @@ jobs:
           git add .
           git diff --staged --quiet || git commit -m ":memo: Sync README.md" || echo "no changes"
 
+      - name: Generate verification metadata with signatures and checksums
+        run: |
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata pgp,sha256 --refresh-keys --export-keys --refresh-dependencies help
+
+      - name: Run git add
+        run: |
+          git add .
+          git diff --staged --quiet || git commit -m ":memo: Generate verification metadata with signatures and checksums" || echo "no changes"
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@67ccf781d68cd99b580ae25a5c18a1cc84ffff1f # v7.0.6
         with:
