--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - "build.gradle"
       - "README.md"
+      - "gradle/verification-keyring.keys"
+      - "gradle/verification-metadata.xml"
       - "src/main/resources/messages_*.properties"
       - "src/main/resources/static/3rdPartyLicenses.json"
       - "scripts/ignore_translation.toml"
@@ -110,8 +112,8 @@ jobs:
 
       - name: Run git add
         run: |
-          git add verification-keyring.keys
-          git add verification-metadata.xml
+          git add gradle/verification-keyring.keys
+          git add gradle/verification-metadata.xml
           git diff --staged --quiet || git commit -m ":memo: Generate verification metadata with signatures and checksums" || echo "no changes"
 
       - name: Create Pull Request
