--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -107,8 +107,8 @@ jobs:
 
       - name: Generate verification metadata with signatures and checksums
         run: |
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata pgp,sha256 --refresh-keys --export-keys --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help
           ./gradlew clean build
 
       - name: Run git add
