--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -118,6 +118,7 @@ jobs:
           git diff --staged --quiet || git commit -m ":memo: Generate verification metadata with signatures and checksums" || echo "no changes"
 
       - name: Create Pull Request
+        if: always()
         uses: peter-evans/create-pull-request@67ccf781d68cd99b580ae25a5c18a1cc84ffff1f # v7.0.6
         with:
           token: ${{ steps.generate-token.outputs.token }}
@@ -158,7 +159,7 @@ jobs:
             [1]: https://github.com/peter-evans/create-pull-request
           draft: false
           delete-branch: true
-          labels: Documentation,Translation,github-actions
+          labels: github-actions
           sign-commits: true
           add-paths: |
             README.md
