--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,9 @@ jobs:
       - name: PR | Generate verification metadata with signatures and checksums for dependabot[bot]
         if: github.event.pull_request.user.login == 'dependabot[bot]'
         run: |
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies help
-          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
+          ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
+          mv gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
 
       - name: Build with Gradle and no spring security
         id: build_without_security
