--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -110,6 +110,7 @@ jobs:
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
           mv -f gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
+          mv -f gradle/verification-keyring.dryrun.keys gradle/verification-keyring.keys
           ./gradlew clean build
 
       - name: Run git add
