--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256 --refresh-dependencies --dry-run help
           ./gradlew clean dependencies buildEnvironment spotlessApply --write-verification-metadata sha256,pgp --refresh-keys --export-keys --refresh-dependencies --dry-run help
           mv -f gradle/verification-metadata.dryrun.xml gradle/verification-metadata.xml
+          mv -f gradle/verification-keyring.dryrun.keys gradle/verification-keyring.keys
 
       - name: Build with Gradle and no spring security
         id: build_without_security
