--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jdk-version: [17] # , 21]
+        jdk-version: [17, 21]
 
     steps:
       - name: Harden Runner
