--- a/build.gradle
+++ b/build.gradle
@@ -284,6 +284,9 @@ configurations.all {
 }
 dependencies {
 
+    // CWE-835 | CWE-770 | CWE-770
+    implementation("org.apache.commons:commons-compress:1.26.0")
+
     if (System.getenv("STIRLING_PDF_DESKTOP_UI") != "false") {
         implementation "me.friwi:jcefmaven:127.3.1"
         implementation "org.openjfx:javafx-controls:21"
