--- a/build.gradle
+++ b/build.gradle
@@ -286,6 +286,8 @@ dependencies {
 
     // CWE-835 | CWE-770 | CWE-770
     implementation("org.apache.commons:commons-compress:1.26.0")
+    // CWE-121 | CWE-502
+    implementation 'com.thoughtworks.xstream:xstream:1.4.21'
 
     if (System.getenv("STIRLING_PDF_DESKTOP_UI") != "false") {
         implementation "me.friwi:jcefmaven:127.3.1"
